@@ -29,23 +29,18 @@ void mssh_gconf_notify_fg_colour(GConfClient *client, guint cnxn_id,
 {
     GConfValue *value;
     const gchar *colour_s;
-    GdkVisual *visual = gdk_visual_get_system();
-    GdkColormap *colour_map;
-    GdkColor colour;
+    GdkRGBA colour;
     int i;
 
     MSSHWindow *window = MSSH_WINDOW(data);
 
     value = gconf_entry_get_value(entry);
     colour_s = gconf_value_get_string(value);
-    colour_map = gdk_colormap_new(visual, TRUE);
-    gdk_colormap_alloc_color(colour_map, &colour, TRUE, TRUE);
-
-    gdk_color_parse(colour_s, &colour);
+    gdk_rgba_parse(&colour, colour_s);
 
     for(i = 0; i < window->terminals->len; i++)
     {
-        vte_terminal_set_color_foreground(VTE_TERMINAL(g_array_index(
+        vte_terminal_set_color_foreground_rgba(VTE_TERMINAL(g_array_index(
             window->terminals, MSSHTerminal*, i)), &colour);
     }
 }
@@ -55,19 +50,14 @@ void mssh_gconf_notify_bg_colour(GConfClient *client, guint cnxn_id,
 {
     GConfValue *value;
     const gchar *colour_s;
-    GdkVisual *visual = gdk_visual_get_system();
-    GdkColormap *colour_map;
-    GdkColor colour;
+    GdkRGBA colour;
     int i;
 
     MSSHWindow *window = MSSH_WINDOW(data);
 
     value = gconf_entry_get_value(entry);
     colour_s = gconf_value_get_string(value);
-    colour_map = gdk_colormap_new(visual, TRUE);
-    gdk_colormap_alloc_color(colour_map, &colour, TRUE, TRUE);
-
-    gdk_color_parse(colour_s, &colour);
+    gdk_rgba_parse(&colour, colour_s);
 
     for(i = 0; i < window->terminals->len; i++)
     {
