@@ -1,5 +1,12 @@
 2014-01-15  Héctor García  <hector@debian.org>
 
+    Bumped version to 2.0 gtk3 support
+
+    Changed from gdk_color_ to gdk_rgba_ functions
+    Changed from gtk_color_button to gtk_color_chooser
+
+2014-01-15  Héctor García  <hector@debian.org>
+
     Bumped version to 1.3 gtk2 deprecated symbols free
 
     Replaced GDK_<keyname> with GDK_KEY_<keyname>
